--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -242,7 +242,7 @@ nav {
 
 .travel-container {
   margin: 40px 0 0 0 ;
-  background-image: url('images/travel.jpg');
+  background-image: url('.../../images/travel.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -310,7 +310,7 @@ nav {
 
   .run-container {
   //margin: 20px 0 0 0 ;
-  background-image: url('images/runner.png');
+  background-image: url('.../../images/runner.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
