--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import "partials/setup/variables";
 
 body {
-  background-image: url('/Images/cheap_diagonal_fabric.png');
+  background-image: url('https://github.com/ZachSchreiber/Stacy-runs-obx/blob/master/images/cheap_diagonal_fabric.png');
   background-attachment: fixed;
 }
 
