--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import "partials/setup/variables";
 
 body {
-  background-image: url('/images/cheap_diagonal_fabric.png');
+  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/cheap_diagonal_fabric.png');
   background-attachment: fixed;
 }
 
@@ -15,7 +15,7 @@ nav {
   flex-direction: column;
   overflow: hidden;
   height: 630px;
-  background-image: url('/images/mainStacy.png');
+  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/mainStacy.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -193,7 +193,7 @@ nav {
 
 .goof-container {
   margin: 40px 0 ;
-  background-image: url('/images/goof.jpg');
+  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/goof.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -242,7 +242,7 @@ nav {
 
 .travel-container {
   margin: 40px 0 0 0 ;
-  background-image: url('/images/travel.jpg');
+  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/travel.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
