--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,371 +1,14 @@
 @import "partials/setup/reset";
 @import "partials/setup/variables";
+@import "partials/setup/intro";
+@import "partials/setup/goof";
+@import "partials/setup/travel";
+@import "partials/setup/run";
+
 
 body {
   background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/cheap_diagonal_fabric.png');
   background-attachment: fixed;
 }
 
-nav {
-  margin-top: 20px;
-  position: relative;
-  padding: 30px 0;
-  display: flex;
-  //justify-content: center;
-  flex-direction: column;
-  overflow: hidden;
-  height: 630px;
-  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/mainStacy.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-
-  .title-first, .title-second, .title-third {
-    position: absolute;
-    font-family: $secondary;
-    font-size: 15em;
-    color: #fff;
-    top: 30%;
-    left: 5%;
-    opacity: 0;
-  }
-
-  .title-first {
-    -webkit-animation: 1.3s ease 0s normal forwards 1 titleFirst;
-    animation: 1.3s ease 0s normal forwards 1 titleFirst;
-  }
-
-  @keyframes titleFirst{
-      0% { opacity:0; }
-      66% { opacity:1; }
-      100% { opacity:0; }
-  }
-
-  @-webkit-keyframes titleFirst {
-      0% { opacity:0; }
-      66% { opacity:1; }
-      100% { opacity:0; }
-  }
-
-  .title-second {
-    -webkit-animation: 1s ease 1.5s normal forwards 1 titleSecond;
-    animation: 1s ease 1.5s normal forwards 1 titleSecond;
-  }
-
-  @keyframes titleSecond{
-      0% { opacity:0; }
-      66% { opacity:1; }
-      100% { opacity:0; }
-  }
-  @-webkit-keyframes titleSecond {
-      0% { opacity:0; }
-      66% { opacity:1; }
-      100% { opacity:0; }
-  }
-
-  .title-third {
-    -webkit-animation: 1s ease 2.8s normal forwards 1 titleThird;
-    animation: 1s ease 2.8s normal forwards 1 titleThird;
-  }
-
-  @keyframes titleThird{
-      0% { opacity:0; }
-      66% { opacity:1; }
-      100% { opacity:0; }
-  }
-  @-webkit-keyframes titleThird{
-      0% { opacity:0; }
-      66% { opacity:1; }
-      100% { opacity:0; }
-  }
-
-
-.page-title {
-  z-index: 99;
-  height: 50%;
-  width: 100%;
-  background-color: transparent;
-
-.title-text {
-  text-align: center;
-  font-size: 7em;
-  font-family: $mainFont;
-  color: #fff;
-  -webkit-animation: 5.5s ease 0s normal forwards 1 titleDelay;
-  animation: 5.5s ease 0s normal forwards 1 titleDelay;
-
-}
-@keyframes titleDelay{
-    0% { opacity:0; }
-    66% { opacity:0; }
-    100% { opacity:1; }
-}
-
-@-webkit-keyframes titleDelay{
-    0% { opacity:0; }
-    66% { opacity:0; }
-    100% { opacity:1; }
-}
-}
-
-.move-arrow {
-  position: absolute;
-  font-size: 3em;
-  color: #fff;
-  top: 130px;
-  left: 33%;
-  animation: upDown 1.5s ease-in-out 4s infinite;
-  -webkit-animation: 1.5s ease-in-out 4s infinite upDown;
-  z-index: 99;
-  opacity: 0;
-}
-@keyframes upDown {
-  0%{
-    opacity: 1;
-    transform: translateY(0);
-  }
-  50% {
-    opacity: 1;
-    transform: translateY(25px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@-webkit-keyframes upDown {
-  0%{
-    opacity: 1;
-    transform: translateY(0);
-  }
-  50% {
-    opacity: 1;
-    transform: translateY(25px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-.main-stacy {
-  height: 1000px;
-  top: 0;
-  left: 0;
-  position: absolute;
-  -ms-transform: rotate(180deg); /* IE 9 */
-    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-    transform: rotate(180deg);
-
-}
-
-.main-direct {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding-right: 50px;
-  z-index: 99;
-  color: #fff;
-  font-size: 6em;
-  height: 50%;
-  width: 100%;
-  font-family: $secondary;
-  -webkit-animation: 7s ease 0s normal forwards 1 mainDirect;
-  animation: 7s ease 0s normal forwards 1 mainDirect;
-
-}
-
-@keyframes mainDirect{
-    0% { opacity:0; }
-    66% { opacity:0; }
-    100% { opacity:1; }
-}
-
-@-webkit-keyframes mainDirect{
-    0% { opacity:0; }
-    66% { opacity:0; }
-    100% { opacity:1; }
-}
-
-
-
-}
-
-.goof-container {
-  margin: 40px 0 ;
-  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/goof.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  height: 630px;
-  overflow: hidden;
-  display:  flex;
-  justify-content: center;
-  align-items: center;
-
-
-.animated-text {
-  //opacity: 0;
-  position: relative;
-
-  &.goof-text {
-    margin-top: 100px;
-    font-size: 10em;
-    color: #fff;
-    font-family: $secondary;
-    text-shadow: 2px 2px 2px black;
-  }
-
-    &.slide-left {
-      //  opacity: 0;
-  -moz-transition: all 400ms linear;
-  -webkit-transition: all 400ms linear;
-  -o-transition: all 400ms linear;
-  transition: all 400ms linear;
-  -moz-transform: translate3d(-200px, 0px, 0px);
-  -webkit-transform: translate3d(-200px, 0px, 0px);
-  -o-transform: translate(-200px, 0px);
-  -ms-transform: translate(-200px, 0px);
-  transform: translate3d(-200px, 0px, 0px);
-}
-&.in-view {
-  opacity: 1;
-  -moz-transform: translate3d(0px, 0px, 0px);
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  -o-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
-}
-}
-
-}
-
-.travel-container {
-  margin: 40px 0 0 0 ;
-  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/travel.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  height: 630px;
-  overflow: hidden;
-  display:  flex;
-  justify-content: center;
-  align-items: center;
-
-  .animated-text {
-    position: relative;
-
-    &.travel-text {
-      margin-top: 100px;
-      font-size: 10em;
-      color: #fff;
-      font-family: $secondary;
-      text-shadow: 2px 2px 2px black;
-    }
-    &.slide-up {
-      opacity: 0;
-  -moz-transition: all 600ms ease-out;
-  -webkit-transition: all 600ms ease-out;
-  -o-transition: all 600ms ease-out;
-  transition: all 600ms ease-out;
-  -moz-transform: translate3d(0px, 200px, 0px);
-  -webkit-transform: translate3d(0px, 200px, 0px);
-  -o-transform: translate(0px, 200px);
-  -ms-transform: translate(0px, 200px);
-  transform: translate3d(0px, 200, 0px);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-&.in-view {
-  opacity: 1;
-  -moz-transform: translate3d(0px, 0px, 0px);
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  -o-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
-}
-    }
-  }
-
-  .and-container {
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    .and-text {
-      text-align: center;
-      width: 90%;
-      font-size: 10em;
-      color: #fff;
-      background-color: $purple;
-      //border-radius: 5px;
-      padding: 5px 60px;
-      font-family: $secondary;
-
-
-    }
-  }
-
-  .run-container {
-  //margin: 20px 0 0 0 ;
-  background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/runner.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  height: 680px;
-  overflow: hidden;
-  display:  flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-  .animated-text {
-    position: relative;
-
-
-  &.run-text {
-    padding: 5% 0 0 10%;
-    font-size: 17em;
-    color: #fff;
-    font-family: $secondary;
-    text-shadow: 2px 0px 2px black;
-    height: 90%;
-    width: 100%;
-  }
-
-    &.appear {
-      opacity: 0;
-  -moz-transition: all 3000ms ease-in;
-  -webkit-transition: all 3000ms ease-in;
-  -o-transition: all 3000ms ease-in;
-  transition: all 3000ms ease-in;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-    }
-    &.in-view {
-      opacity: 1;
-    }
-  }
-
-  .bottom-text-container {
-    margin-bottom: 40px;
-    text-align: right;
-    padding: 20px 50px 20px 0;
-    width: 100%;
-    //height: 10%;
-    background-color: rgba(155, 189, 201, 0.5);
-     .bottom-text {
-       text-align: right;
-       width: 100%;
-       height: 10%;
-       font-size: 5em;
-       color: #fff;
-       font-family: $secondary;
-       text-align: right;
-
-   }
-  }
-}
+  
