--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,58 @@
 body {
   background-image: url('https://zachschreiber.github.io/Stacy-runs-obx/images/cheap_diagonal_fabric.png');
   background-attachment: fixed;
+  //padding: 10px 5px;
 }
 
-  
+
+.race-info {
+  margin: 40px 0;
+  color: #4c4c4c;
+  font-family: $secondary;
+  padding: 20px;
+  font-size: 3em;
+  line-height: 80px;
+  background-color: #fff;
+
+.big-o {
+  font-size: 1.5em;
+}
+
+.purple {
+  color: $lightBlue;
+}
+
+
+
+}
+
+  .map {
+    width: 200px;
+    height: 500px;
+    float: left;
+    margin: 20px 70px 20px 20px;
+    -moz-box-shadow: 1px 6px 14px #4a494a;
+-webkit-box-shadow: 1px 6px 14px #4a494a;
+box-shadow: 1px 6px 14px #4a494a;
+
+  }
+
+  @media only screen and (max-width: 700px) {
+
+    .race-info {
+      font-size: 1.5em;
+      line-height: 60px;
+
+      .big-o {
+        font-size: 1em;
+      }
+    }
+
+    .map {
+      width: 150px;
+      height: 400px;
+      margin: 10px 40px 10px 10px;
+
+    }
+
+  }
