--- a/src/styles/partials/setup/_info.scss
+++ b/src/styles/partials/setup/_info.scss
@@ -33,11 +33,11 @@ box-shadow: 1px 6px 14px #4a494a;
   @media only screen and (max-width: 700px) {
 
     .race-info {
-      font-size: 1.5em;
-      line-height: 50px;
+      font-size: 1.2em;
+      line-height: 40px;
 
       .big-o {
-        font-size: 1em;
+        font-size: .8em;
       }
     }
 
