--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -104,7 +104,7 @@ body {
 
     img {
       height: 300px;
-      margin: 10px;
+      margin: 15px;
     }
   }
 }
@@ -123,6 +123,7 @@ body {
    }
 
    .donate {
+       margin-bottom: 25px;
      img {
        height: 250px;
      }
